enhancement: support for calculations in net terms - stage: allow to store tariff net value (LMS #1361)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1095,6 +1095,29 @@
   }
 }
 
+.lms-ui-icon-net-to-gross {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    color: gold;
+    text-stroke-width: 1px;
+    text-stroke-color: black;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    content: @fa-var-arrow-alt-circle-right;
+  }
+}
+
+.lms-ui-icon-gross-to-net {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-arrow-alt-circle-left;
+  }
+}
+
 .lms-ui-icon-parentticket {
   .fa-icon;
   .fas;
