--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -51,7 +51,7 @@
 {/function}
 
 <H1>{$layout.pagetitle}</H1>
-<FORM METHOD="POST" NAME="tariff" ACTION="?m=tariffedit&id={$tariff.id}">
+<FORM METHOD="POST" id="tariff" NAME="tariff" ACTION="?m=tariffedit&id={$tariff.id}">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE class="lmsbox">
     <THEAD>
@@ -77,17 +77,51 @@
                         <TABLE CLASS="tariff_tab bold-second">
                             <tr>
                                 <td>
-                                    {icon name="value"}
+                                    {icon name="money"}
                                 </td>
-                                <td>
-                                    {trans("Value:")}
+                                <td class="bold nobr">
+                                    {trans("Price")}
                                 </td>
-                                <td>
-                                    <input type="text" value="{$tariff.value}" size="8" name="tariff[value]"
-                                        {tip text="Enter value" trigger="value"}>
+                                <td class="nobr">
+                                    <table>
+                                        <tr>
+                                            <td align="right">
+                                                <label>{trans('Net')}
+                                                    <input type="text" size="8" id="netprice" name="tariff[netvalue]" value="{$tariff.netvalue}" {if !$tariff.netflag} disabled{/if}>
+                                                </label>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="right">
+                                                <label>{trans('Gross')}
+                                                    <input type="text" size="8" id="grossprice" name="tariff[value]" value="{$tariff.value}" {if $tariff.netflag} disabled{/if} {tip trigger="value"}>
+                                                </label>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
 
+                            <tr>
+                                <td>
+                                    {icon name="money"}
+                                </td>
+                                <td class="bold nobr">
+                                    {trans("Currency")}
+                                </td>
+                                <td class="nobr">
                                     {currency_selection selected=$tariff.currency elementname="tariff[currency]"}
+                                </td>
+                            </tr>
 
+                            <tr>
+                                <td>
+                                    {icon name="money"}
+                                </td>
+                                <td>
+                                    {trans("Accounting")}
+                                </td>
+                                <td>
                                     <select size="1" name="tariff[period]" {tip text="Select time period of tariff accounting"}>
                                         <option value=""{if $tariff.period == $key} selected{/if}>{trans("undefined")}</option>
                                         {foreach from=$_PERIODS key=key item=item}
@@ -96,6 +130,10 @@
                                             {/if}
                                         {/foreach}
                                     </select>
+                                    <label>{trans('according to the net price')}
+                                        <input type="checkbox" id="netflag" name="tariff[netflag]" value="1" {if $tariff.netflag} checked{/if}
+                                                {tip text="Billing according to the net price"}>
+                                    </label>
                                 </td>
                             </tr>
                             <tr>
@@ -118,7 +156,7 @@
                             </tr>
                             <tr>
                                 <TD>
-                                    <IMG SRC="img/tax.gif" ALT="">
+                                    {icon name="value"}
                                 </TD>
                                 <TD class="bold nobr">
                                     <label for="splitpayment">
@@ -147,13 +185,16 @@
                                 <TD><IMG SRC="img/tax.gif" ALT=""></TD>
                                 <TD>{trans("Tax:")}</TD>
                                 <TD>
-                                    <SELECT SIZE="1" NAME="tariff[taxid]" {tip text="Select Tax rate" trigger="taxid"}{if empty($taxeslist)} required{/if}>
+                                    <SELECT SIZE="1" id="tax" NAME="tariff[taxid]" {tip text="Select Tax rate" trigger="taxid"}{if empty($taxeslist)} required{/if}>
                                         {foreach $taxeslist as $tax}
                                             <OPTION VALUE="{$tax.id}"{if $tariff.taxid == $tax.id} selected{/if}>{$tax.label}</OPTION>
                                         {foreachelse}
                                             <option value="">{trans("- no tax rates defined -")}</option>
                                         {/foreach}
                                     </SELECT>
+                                    {foreach $taxeslist as $tax}
+                                        <input type="hidden" id="tax{$tax.id}" name="tax{$tax.id}" value="{$tax.value}" disabled>
+                                    {/foreach}
                                 </TD>
                             </TR>
                             <TR>
@@ -402,7 +443,7 @@
 
     <TR>
         <TD colspan="3" class="lms-ui-box-buttons">
-            {button type="submit" label="Submit" icon="save"}
+            {button label="Submit" icon="save" onCLick="submitForm();" accesskey="E"}
             {button label="Cancel" icon="cancel" onclick="location.href='?m=tariffinfo&id={$tariff.id}';"}
         </TD>
     </TR>
@@ -410,14 +451,19 @@
 </TABLE>
 </FORM>
 
-<SCRIPT type="text/javascript">
-<!--
+<script>
+    function submitForm(callback) {
+        $("#grossprice").prop('disabled', false);
+        $("#netprice").prop('disabled', false);
+        document.tariff.submit();
+    }
+
     function checklimit(elem) {
         document.forms['tariff'].elements['tariff[' + elem.id + ']'].style.display = elem.checked ? 'none' : '';
     }
 
     $( function() {
-		$('form[name="tariff"] [name="tariff[name]"]').focus();
+        $('form[name="tariff"] [name="tariff[name]"]').focus();
 
         updateui();
 
@@ -426,7 +472,7 @@
         });
 
         function updateui() {
-            var selected_item = $( "#tariff-type" ).val();
+            let selected_item = $( "#tariff-type" ).val();
 
             switch (selected_item) {
                 case "{$smarty.const.SERVICE_PHONE}":
@@ -448,8 +494,84 @@
                     $( '#tariff-phone-settings' ).hide();
             }
         }
-    })
-//-->
-</SCRIPT>
 
+        const netFlagElem = $("#netflag");
+        const netPriceElem = $("#netprice");
+        const grossPriceElem = $("#grossprice");
+
+        function claculatePriceFromGross() {
+            let grossPriceElemVal = grossPriceElem.val();
+            if (grossPriceElem.val().length) {
+                let selectedTaxId = $("#tax").find('option:selected').val();
+                let tax = $('#tax' + selectedTaxId).val();
+
+                let grossPrice = parseFloat(grossPriceElemVal.replace(/[\,]+/, '.'));
+                grossPrice = Math.round((grossPrice + Number.EPSILON) * 100) / 100;
+
+                let netPriceVal = Math.round(((grossPrice / (tax / 100 + 1)) + Number.EPSILON) * 100) / 100;
+                netPriceVal = netPriceVal.toFixed(2).toString().replace(/[\.]+/, ',');
+                netPriceElem.val(netPriceVal);
+
+                grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+                grossPriceElem.val(grossPrice);
+            } else {
+                netPriceElem.val('');
+            }
+        }
+
+        function claculatePriceFromNet() {
+            let netPriceElemVal = netPriceElem.val();
+            if (netPriceElem.val().length) {
+                let selectedTaxId = $("#tax").find('option:selected').val();
+                let tax = $('#tax' + selectedTaxId).val();
+
+                let netPrice = parseFloat(netPriceElemVal.replace(/[\,]+/, '.'));
+                netPrice = Math.round((netPrice + Number.EPSILON) * 100) / 100;
+
+                let grossPriceVal = Math.round(((netPrice * (tax / 100 + 1)) + Number.EPSILON) * 100) / 100;
+                grossPriceVal = grossPriceVal.toFixed(2).toString().replace(/[\.]+/, ',');
+                grossPriceElem.val(grossPriceVal);
+
+                netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+                netPriceElem.val(netPrice);
+            } else {
+                grossPriceElem.val('');
+            }
+        }
+
+        $('#netflag').on('change', function () {
+            let netFlagChecked = netFlagElem.is(':checked');
+            if (netFlagChecked) {
+                grossPriceElem.prop('disabled', true);
+                netPriceElem.prop('disabled', false);
+                claculatePriceFromNet();
+            } else {
+                grossPriceElem.prop('disabled', false);
+                netPriceElem.prop('disabled', true);
+                claculatePriceFromGross();
+            }
+        });
+
+        $("#tax").on('change', function () {
+            let netFlagChecked = netFlagElem.is(':checked');
+            if (netFlagChecked) {
+                claculatePriceFromNet();
+            } else {
+                claculatePriceFromGross();
+            }
+        });
+
+        $("#grossprice").on('change', function () {
+            claculatePriceFromGross();
+        });
+
+        $("#netprice").on('change', function () {
+            claculatePriceFromNet();
+        });
+
+        $('#tariff').submit(function (evt) {
+            evt.preventDefault();
+        });
+    })
+</script>
 {/block}
