devel/cleanup: cleanup in tariff forms

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -46,6 +46,15 @@
   }
 }
 
+.lms-ui-icon-tariff-limit {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-hourglass-half;
+  }
+}
+
 .lms-ui-icon-map-pin {
   .fa-icon;
   .fas;
