improvement: added phone call icon

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -464,6 +464,15 @@
   }
 }
 
+.lms-ui-icon-phone-call {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-phone-volume;
+  }
+}
+
 .lms-ui-icon-sms,
 .lms-ui-icon-mobile {
   .fa-icon;
