--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -360,12 +360,30 @@
 }
 
 .lms-ui-icon-fileupload,
-.lms-ui-icon-upload {
+.lms-ui-icon-attachment {
   .fa-icon;
   .fas;
   .lms-ui-icon;
   &:before {
     content: @fa-var-paperclip;
+  }
+}
+
+.lms-ui-icon-download {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-download;
+  }
+}
+
+.lms-ui-icon-upload {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-upload;
   }
 }
 
