improvement: separate attachment, download and upload icons with a little bit different meaning

--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -605,7 +605,7 @@
 		</tr>
 		<tr id="attachment"{if $message.type > $smarty.const.MSG_MAIL} style="display: none"{/if}>
 			<td>
-				{icon name="fileupload"}
+				{icon name="attachment"}
 			</td>
 			<td class="nobr">
 				<strong>{trans("Attachments:")}</strong>
