--- a/templates/default/rt/rtmessageadd.html
+++ b/templates/default/rt/rtmessageadd.html
@@ -91,7 +91,7 @@
 					>{$message.body}</TEXTAREA>
 			{/box_row}
 			{/block}
-			{box_row icon="upload" icon_class="fa-fw" label="Attachments:"}
+			{box_row icon="attachment" icon_class="fa-fw" label="Attachments:"}
 				{fileupload id="files" fileupload=$fileupload form="message-form"}
 			{/box_row}
 
