--- a/templates/default/rt/rtnoteadd.html
+++ b/templates/default/rt/rtnoteadd.html
@@ -43,7 +43,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr valign-top">
-			{icon name="upload"}
+			{icon name="attachment"}
 			{trans("Attachments:")}
 		</TD>
 		<TD>
