--- a/templates/default/cash/cashimport.html
+++ b/templates/default/cash/cashimport.html
@@ -265,7 +265,7 @@
     <tbody>
 		<tr>
 			<td class="nobr valign-top" id="file-label">
-				{icon name="fileupload"}
+				{icon name="attachment"}
 				<strong>{trans("Import files:")}</strong>
 			</td>
 			<td class="nobr">
@@ -301,7 +301,7 @@
     <thead>
 		<tr>
 			<td>
-				{icon name="fileupload"}
+				{icon name="attachment"}
 				<strong>{trans("Packages:")}</strong>
 			</td>
 		</tr>
