--- a/templates/default/message/messageinfo.html
+++ b/templates/default/message/messageinfo.html
@@ -102,7 +102,7 @@
 	{if $filecontainers}
 		<TR>
 			<TD class="valign-top">
-				{icon name="upload"}
+				{icon name="attachment"}
 			</TD>
 			<TD class="bold valign-top">
 				{trans("Attachments:")}
@@ -115,7 +115,7 @@
 								text="{$file.filename} <i class=\"lms-ui-icon-view{if preg_match('/pdf/',$file.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$file.contenttype)} xls{/if}\"></i>"}
 							<br>
 						{/foreach}
-					{button id="downloadzippedcontainer" onclick="location.href = '?m=attachments&attachmentaction=downloadzippedcontainer&type=messageid&id={$container.id}';" label="Download as zip archive" icon="fileupload"}
+					{button id="downloadzippedcontainer" onclick="location.href = '?m=attachments&attachmentaction=downloadzippedcontainer&type=messageid&id={$container.id}';" label="Download as zip archive" icon="download"}
 				{/foreach}
 			</TD>
 		</TR>
