--- a/templates/default/rt/rtticketmessagesbox.html
+++ b/templates/default/rt/rtticketmessagesbox.html
@@ -256,7 +256,7 @@
 										{foreach $message.attachments as $attachment}
 											{documentview id="{$message.id}-{$attachment@index}" type=$attachment.contenttype name=$attachment.filename
 												url="?m=rtmessageview&tid={$ticket.ticketid}&mid={$message.id}&file={urlencode($attachment.filename)}&api=1"
-												text="{icon name="upload" label="{$attachment.filename}"}"}
+												text="{icon name="attachment" label="{$attachment.filename}"}"}
 										{/foreach}
 									{/if}
 								</div>
