--- a/templates/default/customer/customerassignmentsedit.html
+++ b/templates/default/customer/customerassignmentsedit.html
@@ -110,7 +110,16 @@
 								{/block}
 
 								{foreach $tariffs as $tariff}
-									<option value="{$tariff.id}" data-tarifftype="{$tariff.tarifftype}" data-tariffaccess="{$tariff.authtype}" data-tarifftags="{$tariff.tags}" {if $tariff.id==$assignment.tariffid} selected{/if} data-valid="{$tariff.valid}"{if !$tariff.valid} class="blend"{if !$assignment.alltariffs} style="display: none;"{/if}{/if}>
+									<option value="{$tariff.id}"
+											data-tarifftype="{$tariff.tarifftype}"
+											data-tariffaccess="{$tariff.authtype}"
+											data-tarifftags="{$tariff.tags}"
+											data-tariffvalue="{$tariff.value}"
+											data-tariffnetvalue="{$tariff.netvalue}"
+											data-tariffnetflag="{$tariff.netflag}"
+											data-tarifftaxid="{$tariff.taxid}"
+											{if $tariff.id==$assignment.tariffid} selected{/if}
+											data-valid="{$tariff.valid}"{if !$tariff.valid} class="blend"{if !$assignment.alltariffs} style="display: none;"{/if}{/if}>
 									{$tariff.name}
 									{$bracket_open = false}
 									{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}({moneyf($tariff.value, $tariff.currency)}{$bracket_open = true}{/if}{if $tariff.upceil || $tariff.downceil}{if $bracket_open}, {else}({$bracket_open = true}{/if}{convert_to_units($tariff.downceil * $speed_unit_type, $speed_unit_aggregation_threshold, $speed_unit_type)}/{convert_to_units($tariff.upceil * $speed_unit_type, $speed_unit_aggregation_threshold, $speed_unit_type)}{/if}{if $bracket_open}){/if}
@@ -153,6 +162,11 @@
 {include file="customer/customerassignments.html"}
 
 <SCRIPT>
+	var tariffDefaultTaxId = {$defaultTaxId};
+	var assignmentGrossvalue = '{$assignment.value}';
+	var assignmentNetvalue = '{$assignment.netvalue}';
+	var assignmentNetflag = '{$assignment.netflag}';
+	var assignmentTaxid = '{$assignment.taxid}';
 
 	var tariffTypes = [];
 	{foreach $tariffs as $tariff}
@@ -213,7 +227,12 @@
 			}
 			{/if}
 
-            document.assignment.submit();
+			$("#grossprice").prop('disabled', false);
+			$("#netprice").prop('disabled', false);
+			$("#netflag").prop('disabled', false);
+			$("#tax").prop('disabled', false);
+
+			document.assignment.submit();
 		});
 
 		$('#alltariffs').click(function() {
