added translation also to strings.php

--- a/userpanel/style/bclean/style.less
+++ b/userpanel/style/bclean/style.less
@@ -28,7 +28,7 @@
 @import "../../../css/less/icons";
 @import "../../../css/less/datatables";
 //@import "../../../css/less/jquery-ui";
-//@import "../../../css/less/button";
+@import "../../../css/less/button";
 
 .lms-userpanel-alert,
 INPUT.lms-userpanel-alert,
