--- a/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
+++ b/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
@@ -63,7 +63,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				{button type="submit" class="btn btn-danger submit-button" data-attributes="formnovalidate" accesskey="S" icon="message" label="<!helpdesk>Submit"}
+				{button type="submit" class="btn btn-danger submit-button" formnovalidate=true accesskey="S" icon="message" label="<!helpdesk>Submit"}
 				{button class="btn btn-secondary" data_dismiss="modal" icon="close" label="Close"}
 				<input type="hidden" name="wyslane" value="1">
 			</div>
