--- a/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
+++ b/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
@@ -95,7 +95,7 @@
 									{if isset($link.extra)}{$link.extra}{/if}
 								{/foreach}
 								{if $item.doctype == $smarty.const.DOC_INVOICE || $item.doctype == $smarty.const.DOC_CNOTE}
-									{button class="btn btn-primary btn-sm" onclick="reset_login_timeout(); location.href='?m=finances&f=invoice&id={$item.docid}'" external="_blank" icon="print" label="Print"}
+									{button class="btn btn-primary btn-sm" onclick="reset_login_timeout(); location.href='?m=finances&f=invoice&id={$item.docid}'" external=true icon="print" label="Print"}
 								{else}
 									&nbsp;
 								{/if}
