--- a/userpanel/modules/info/style/bclean/templates/userinfobox.html
+++ b/userpanel/modules/info/style/bclean/templates/userinfobox.html
@@ -17,7 +17,7 @@
 		{/if}
 		{if $rights.info.edit_addr || $rights.info.edit_addr_ack || $rights.info.edit_contact || $rights.info.edit_contact_ack}
 			{if $rights.info.edit_addr || $rights.info.edit_addr_ack || $rights.info.edit_contact || $rights.info.edit_contact_ack}
-				{button id="updatedatabtn" class="btn btn-primary btn-sm" data_toggle="modal" data_target="#updateuserinfobox" accesskey="A" icon="reload" label="Actualize"}
+				{button id="updatedatabtn" class="btn btn-primary btn-sm" data_toggle="modal" data_target="#updateuserinfobox" accesskey="A" icon="reload" label="Update"}
 			{/if}
 		{/if}
 	</div>
