--- a/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
+++ b/userpanel/modules/helpdesk/style/bclean/templates/helpdesknew.html
@@ -14,7 +14,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h4 class="modal-title">{trans("New Request")}</h4>
-				{button class="close" data_dismiss="modal" label="&times;"}
+				{button class="close" data_dismiss="modal" icon="cancel"}
 			</div>
 			<div class="modal-body">
 				<form method="post" action="?m=helpdesk" name="helpdesk" enctype="multipart/form-data">
