--- a/userpanel/modules/info/style/bclean/templates/userloginbox.html
+++ b/userpanel/modules/info/style/bclean/templates/userloginbox.html
@@ -26,7 +26,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h4 class="modal-title">{trans("PIN Update")}</h4>
-				{button class="close" data_dismiss="modal" label="&times;"}
+				{button class="close" data_dismiss="modal" icon="cancel"}
 			</div>
 			<div class="modal-body">
 				{if $error.oldpin}
