--- a/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
@@ -64,13 +64,13 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 id="urgent-notice-title" class="modal-title">{$urgent_notice.cdate|date_format:"%Y/%m/%d %H:%M"} / {$urgent_notice.subject}</h4>
-                        {button class="close" data_dismiss="modal" label="&times;"}
+                        {button class="close" data_dismiss="modal" icon="cancel"}
                     </div>
                     <div id="urgent-notice-body" class="modal-body">
                         {$urgent_notice.body}
                     </div>
                     <div class="modal-footer">
-                        {button id="urgent-notice-confirm" href="#" data_id="{$urgent_notice.id}" class="btn btn-primary" icon="confirm" label="I confirm reading"}
+                        {button id="urgent-notice-confirm" data_id="{$urgent_notice.id}" class="btn btn-primary" icon="confirm" label="<userpanel!>Confirm"}
                     </div>
                 </div>
             </div>
