--- a/userpanel/modules/notices/style/bclean/templates/notices.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices.html
@@ -26,10 +26,10 @@
 					<td>{$items.subject}</td>
 					<td>
 						{if $items.type == $smarty.const.MSG_USERPANEL_URGENT || $items.type == $smarty.const.MSG_USERPANEL}
-							{if $items.status == $smarty.const.MSG_SENT || $items.status == $smarty.const.MSG_DELIVERED}
-								{$items.lastreaddate|date_format:"%Y/%m/%d %H:%M"}
-							{else}
+							{if $items.status == $smarty.const.MSG_SENT && !$items.lastreaddate}
 								{trans("Unread")}
+							{elseif $items.status == $smarty.const.MSG_SENT || $items.status == $smarty.const.MSG_DELIVERED}
+								{$items.lastreaddate|date_format:"%Y/%m/%d %H:%M"}
 							{/if}
 						{/if}
 					</td>
