--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -78,66 +78,88 @@
 			&nbsp;
 		</TD>
 	</TR>
-	<TR>
-		<TD colspan="7">
-				<B>{trans("Filter:")} </B>
-				<INPUT type="text" name="search" value="{$listdata.search}" size="15" {tip text="Enter value of searching data and select category"}>&nbsp;
-				<SELECT size="1" name="cat">
-					<OPTION value=""{if $listdata.cat == ""} SELECTED{/if}>{trans("- select filter category -")}</OPTION>
-					<OPTION value="cdate"{if $listdata.cat == "cdate"} SELECTED{/if}>{trans("day (YYYY/MM/DD)")}</OPTION>
-					<OPTION value="month"{if $listdata.cat == "month"} SELECTED{/if}>{trans("month (YYYY/MM)")}</OPTION>
-					<OPTION value="number"{if $listdata.cat == "number"} SELECTED{/if}>{trans("number")}</OPTION>
-					<OPTION value="value"{if $listdata.cat == "value"} SELECTED{/if}>{trans("value")}</OPTION>
-					<OPTION value="name"{if $listdata.cat == "name"} SELECTED{/if}>{trans("customer name")}</OPTION>
-					<OPTION value="customerid"{if $listdata.cat == "customerid"} SELECTED{/if}>{trans("customer ID")}</OPTION>
-					<OPTION value="ten"{if $listdata.cat == "ten"} SELECTED{/if}>{trans("TEN")}</OPTION>
-					<OPTION value="address"{if $listdata.cat == "address"} SELECTED{/if}>{trans("address")}</OPTION>
-					<OPTION value="cnotes"{if $listdata.cat == "cnotes"} SELECTED{/if}>{trans("show only credit notes")}</OPTION>
-				</SELECT>&nbsp;
-				{trans("Plan:")}
-				<input type="hidden" name="numberplanid" value="all">
-				<SELECT name="numberplanid[]" class="lms-ui-multiselect" {tip text="Select numbering plan"} multiple data-default-value="{trans("- all -")}">
-					{foreach $numberplans as $plan}
-						{$period = $plan.period}
-						<OPTION value="{$plan.id}"{if !empty($listdata.numberplanid) && in_array($plan.id, $listdata.numberplanid)} selected{/if}>{number number=$plan.next template=$plan.template time=$invoice.cdate} ({$_NUM_PERIODS.$period})</OPTION>
-					{/foreach}
-				</SELECT>
-				{trans("Division")}:
-				<select size="1" name="divisionid" {tip text="Select division"}>
-					<OPTION value="0">- {trans("all")} -</OPTION>
-					{foreach $divisions as $division}
-						<option value="{$division.id}"{if $division.id == $listdata.divisionid} selected{/if}>{$division.label|escape}</option>
-					{/foreach}
-				</select>
-				{trans("Group:")}
-				<input type="hidden" name="group" value="all">
-				<SELECT size="1" name="group[]" class="lms-ui-multiselect" multiple data-default-value="{trans("- all groups -")}">
-					{foreach $grouplist as $group}
-					<OPTION value="{$group.id}"{if !empty($listdata.group) && in_array($group.id, $listdata.group)} selected{/if}>{$group.name|truncate:30:"&hellip;":true}</OPTION>
-					{/foreach}
-				</SELECT>
-				<INPUT type="checkbox" name="groupexclude" id="groupexclude"{if $listdata.groupexclude} CHECKED{/if}><label for="groupexclude">{trans("exclude group")}</label>
-				<INPUT type="checkbox" name="hideclosed" id="hideclosed"{if $listdata.hideclosed} CHECKED{/if}><label for="hideclosed">{trans("hide accounted<!plural>")}</label>
-				<label {tip text="translates into JPK MPP flag"}>
-					<INPUT type="checkbox" name="splitpayment"{if $listdata.splitpayment} checked{/if}>
-					{trans("split payment")}
-				</label>
-				<label {tip text="translates into JPK FP flag"}>
-					<INPUT type="checkbox" name="withreceipt"{if $listdata.withreceipt} checked{/if}>
-					{trans("with receipt<!plural>")}
-				</label>
-				<label {tip text="translates into JPK EE flag"}>
-					<INPUT type="checkbox" name="telecomservice"{if $listdata.telecomservice} checked{/if}>
-					{trans("<!invoice>telecommunication service")}
-				</label>
-				<label {tip text="translates into JPK TP flag"}>
-					<INPUT type="checkbox" name="relatedentity"{if $listdata.relatedentity} checked{/if}>
-					{trans("related entity")}
-				</label>
-				&nbsp;
-				<A href="javascript:filter();">&raquo;&raquo;&raquo;</A>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="7">
+			<div class="lms-ui-filter-container">
+				<div class="lms-ui-filter-definition">
+					{icon name="filter"}
+					<input type="text" name="search" value="{$listdata.search}" size="15"
+						{tip text="Enter value of searching data and select category"}>
+					<select size="1" name="cat">
+						<option value=""{if $listdata.cat == ""} selected{/if}>{trans("- select filter category -")}</option>
+						<option value="cdate"{if $listdata.cat == "cdate"} selected{/if}>{trans("day (YYYY/MM/DD)")}</option>
+						<option value="month"{if $listdata.cat == "month"} selected{/if}>{trans("month (YYYY/MM)")}</option>
+						<option value="number"{if $listdata.cat == "number"} selected{/if}>{trans("number")}</option>
+						<option value="value"{if $listdata.cat == "value"} selected{/if}>{trans("value")}</option>
+						<option value="name"{if $listdata.cat == "name"} selected{/if}>{trans("customer name")}</option>
+						<option value="customerid"{if $listdata.cat == "customerid"} selected{/if}>{trans("customer ID")}</option>
+						<option value="ten"{if $listdata.cat == "ten"} selected{/if}>{trans("TEN")}</option>
+						<option value="address"{if $listdata.cat == "address"} selected{/if}>{trans("address")}</option>
+						<option value="cnotes"{if $listdata.cat == "cnotes"} selected{/if}>{trans("show only credit notes")}</option>
+					</select>&nbsp;
+					<label>
+						{trans("Plan:")}
+						<input type="hidden" name="numberplanid" value="all">
+						<select name="numberplanid[]" class="lms-ui-multiselect" {tip text="Select numbering plan"} multiple data-default-value="{trans("- all -")}">
+							{foreach $numberplans as $plan}
+								{$period = $plan.period}
+								<option value="{$plan.id}"{if !empty($listdata.numberplanid) && in_array($plan.id, $listdata.numberplanid)} selected{/if}
+									>{number number=$plan.next template=$plan.template time=$invoice.cdate} ({$_NUM_PERIODS.$period})</option>
+							{/foreach}
+						</select>
+					</label>
+					<label>
+						{trans("Division")}
+						<select size="1" name="divisionid" {tip text="Select division"}>
+							<option value="0">- {trans("all")} -</option>
+							{foreach $divisions as $division}
+								<option value="{$division.id}"{if $division.id == $listdata.divisionid} selected{/if}>{$division.label|escape}</option>
+							{/foreach}
+						</select>
+					</label>
+					<label>
+						{trans("Group")}
+						<input type="hidden" name="group" value="all">
+						<select size="1" name="group[]" class="lms-ui-multiselect" multiple data-default-value="{trans("- all groups -")}">
+							{foreach $grouplist as $group}
+								<option value="{$group.id}"{if !empty($listdata.group) && in_array($group.id, $listdata.group)} selected{/if}
+									>{$group.name|truncate:30:"&hellip;":true}</option>
+							{/foreach}
+						</select>
+					</label>
+					<label>
+						<input type="checkbox" name="groupexclude"{if $listdata.groupexclude} checked{/if}>
+						{trans("exclude group")}
+					</label>
+					<label>
+						<input type="checkbox" name="hideclosed"{if $listdata.hideclosed} checked{/if}>
+						{trans("hide accounted<!plural>")}
+					</label>
+					<label>
+						<input type="checkbox" name="notsent"{if $listdata.notsent} checked{/if}>
+						{trans("not sent to email")}
+					</label>
+					<label {tip text="translates into JPK MPP flag"}>
+						<input type="checkbox" name="splitpayment"{if $listdata.splitpayment} checked{/if}>
+						{trans("split payment")}
+					</label>
+					<label {tip text="translates into JPK FP flag"}>
+						<input type="checkbox" name="withreceipt"{if $listdata.withreceipt} checked{/if}>
+						{trans("with receipt<!plural>")}
+					</label>
+					<label {tip text="translates into JPK EE flag"}>
+						<input type="checkbox" name="telecomservice"{if $listdata.telecomservice} checked{/if}>
+						{trans("<!invoice>telecommunication service")}
+					</label>
+					<label {tip text="translates into JPK TP flag"}>
+						<input type="checkbox" name="relatedentity"{if $listdata.relatedentity} checked{/if}>
+						{trans("related entity")}
+					</label>
+					{button type="link" icon="next" onclick="filter();"}
+				</div>
+			</div>
+		</td>
+	</tr>
 	{if $pagination->getTotal() != 0}
 	<TR>
 		<TD class="lms-ui-pagination" COLSPAN="6">
