bugfix: fixed network device selection element name in ticket add/edit form

--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -290,7 +290,7 @@
 			{/box_row}
 
 			{box_row icon="netdev" label="Device:" field_id="rtnetdevs" icon_class="fa-fw"}
-				{include file="rt/rtnetdevs.html" form="ticket-form"}
+				{include file="rt/rtnetdevs.html" form="ticket"}
 			{/box_row}
 
 			{box_row id="customernotify-row" icon="message" label="Notify customer:" labelid="customernotify"}
